Create a naive version of memory: cards, deck and first implementation of game

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h1>Hello </h1>
+    <h1>Jeu de mémoire</h1>
+    <div class="deck"></div>
 </body>
 
 <script src="./src/index.js"></script>
