--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>MEMORY</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass:300,900">
-    <link rel="stylesheet" href="./src/base.css">
+    <link rel="stylesheet/less" type="text/css" href="./src/base.less" />
+    <script src="//cdn.jsdelivr.net/npm/less"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
