--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 <body>
     <h1>Jeu de mémoire</h1>
     <div class="deck"></div>
+    <div class="countdown-container">
+        <div class="countdown"></div>
+    </div>
 </body>
 
 <script src="./src/index.js"></script>
