--- a/front/index.html
+++ b/front/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>MEMORY</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass:300,900">
-    <link rel="stylesheet/less" type="text/css" href="./src/base.less" />
-    <script src="//cdn.jsdelivr.net/npm/less"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
@@ -18,6 +16,6 @@
     </div>
 </body>
 
-<script src="./src/index.js"></script>
+<script src="./index.js"></script>
 
 </html>
