--- a/front/index.html
+++ b/front/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>MEMORY</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass:300,900">
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
     <h1>Jeu de mémoire</h1>
+    <button id="start">Commencer</button>
+    <p>Coucou</p>
     <div class="deck"></div>
     <div class="countdown-container">
         <div class="countdown"></div>
