--- a/front/index.html
+++ b/front/index.html
@@ -12,7 +12,10 @@
 <body>
     <h1>Jeu de mémoire</h1>
     <button id="start">Commencer</button>
-    <p>Coucou</p>
+    <div id="scoreboard">
+        <h4>Tes meilleurs scores sont: </h4>
+    </div>
+    </p>
     <div class="deck"></div>
     <div class="countdown-container">
         <div class="countdown"></div>
