--- a/front/index.html
+++ b/front/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass:300,900">
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://use.fontawesome.com/f1c26849b8.js"></script>
 </head>
 
 <body>
     <h1>Jeu de mémoire</h1>
-    <button id="start">Commencer</button>
-    <div id="scoreboard">
-        <h4>Tes meilleurs scores sont: </h4>
-    </div>
-    </p>
-    <div class="deck"></div>
-    <div class="countdown-container">
-        <div class="countdown"></div>
+    <div id="scoreboard"></div>
+    <div> <i class="fas fa-user-nurse"></i></div>
+
+    <div id="deck"></div>
+    <div id="countdown-container">
+        <div id="countdown"></div>
     </div>
 </body>
 
